Wed Dec 17 08:15:04 1997  Gray Watson  <gray@burger.letters.com>

	* Removed allocation macros from the docs and the header.  I was
	not using them anymore and I would think they would be confusing.

	* Added realloc(pnt, 0) works like free(pnt).  Thanks Stefan!

Mon Dec  8 04:34:14 1997  Gray Watson  <gray@burger.letters.com>

	* Reworked the log_error_info routine's dumping of the fence post
	areas to properly dumps upper fence post bytes.

Mon Dec  8 02:34:14 1997  Gray Watson  <gray@burger.letters.com>

	* Releasing dmalloc version 3.3.0.

	* Fixed problems with pthread locking and various conditions.
	Added a warning if lock-on is set without allow-nonlinear.

Sun Dec  7 21:44:17 1997  Gray Watson  <gray@burger.letters.com>

	* Added THREAD_LOCK_INIT_VAL autoconfigure.

Fri Dec  5 12:09:26 1997  Gray Watson  <gray@burger.letters.com>

	* Performed some long overdue major code cleaning.  Added new
	Lycos {}, int _b for bools, and other stuff.

Wed Nov  5 11:25:09 1997  Gray Watson  <gray@burger.letters.com>

	* Renamed argv.[ch] to be dmalloc_argv.[ch] to not clash with argv
	files.

Sun Jul 20 00:40:53 1997  Gray Watson  <gray@burger.letters.com>

	* Added return address handling for SGI.  Thanks James.

Mon Jul  7 03:12:28 1997  Gray Watson  <gray@burger.letters.com>

	* Added better C++ overload functions.  From whom off the Net did
	I get this from?

	* Added test for DMALLOC_SIZE unsigned-ness.

	* Added a FINI_DMALLOC setting to the settings.dist file to
	support the OSF __fini_ stuff.

	* Added pthread lock_on -o environmental settings.  You will need
	to have LOCK_THREADS set to 1 in the settings.h file.

Sat Mar 22 12:28:45 1997  Gray Watson  <gray@burger.letters.com>

	* Added return-address tracking for gcc on alphas.  Thanks
	Alexandre.

Fri Mar 21 09:29:46 1997  Gray Watson  <gray@burger.letters.com>

	* Released version 3.2.1.

	* Added to dmalloc the ability to recognize its internal tags.

	* Added better documentation of auto-dmalloc_shutdown.
