@@ -1,3 +1,9 @@
+Sun Dec 21 19:32:02 1997  Gray Watson  <gray@burger.letters.com>
+
+	* Shifted some flags to ints instead of longs.
+
+	* Improved error string handling.
+
 Wed Dec 17 08:15:04 1997  Gray Watson  <gray@burger.letters.com>
 
 	* Removed allocation macros from the docs and the header.  I was
@@ -1227,5 +1233,5 @@ Thu Mar 12 19:28:34 1992  Gray Watson  (gray@toaster.antaire.com)
 	* Started ChangeLog.
 
 -------------------------------------------------------------------------------
-$Id: ChangeLog,v 1.182 1997/12/18 13:19:56 gray Exp $
+$Id: ChangeLog,v 1.183 1997/12/22 00:32:29 gray Exp $
 -------------------------------------------------------------------------------
